--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="./index.css" />
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+    <script src="../node_modules/phaser/dist/phaser-arcade-physics.min.js"></script>
   </head>
   <body>
     <script>
@@ -26,11 +26,8 @@
 
       function preload() {
         this.load.image("logo", "./assets/favicon.png");
-        this.load.image("sky", "http://labs.phaser.io/assets/skies/space3.png");
-        this.load.image(
-          "red",
-          "http://labs.phaser.io/assets/particles/blue.png"
-        );
+        this.load.image("sky", "./assets/back.png");
+        this.load.image("red", "./assets/favicon.png");
       }
 
       function create() {
@@ -40,7 +37,7 @@
 
         var emitter = particles.createEmitter({
           speed: 150,
-          scale: { start: 1, end: 0 },
+          scale: { start: 0.25, end: 0 },
           blendMode: "ADD",
         });
 
